--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,4 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Poppins&display=swap');
  
