--- a/src/styles/slick.css
+++ b/src/styles/slick.css
@@ -1,10 +1,14 @@
 .slick-slide {
-    padding: 10px 15px !important;
-  }
+  padding: 10px 15px !important;
+}
 
-  .slick-prev{
-    display: none !important;
-  }
-  .slick-next{
-    display: none !important;
-  }
+.slick-prev {
+  display: none !important;
+}
+.slick-next {
+  display: none !important;
+}
+.makeBold{
+  font-weight: 700 !important;
+}
+
